[package]
name = "raptorq_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
tokio = {version = "1.21.0", features = ["full"]}
clap = { version = "3.2.20", features = ["derive"] }
anyhow = "1.0.64"
futures = {version ="0.3.24", features = ["thread-pool"]}
rand = "0.8.5"
raptorq = "1.7.0"
crossbeam-channel = "0.5.6"
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.11"
ureq = "2.5.0"
threadpool = "1.8.1"
rayon = "1.5.3"
nix="0.25.0"
